# sv-ref

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md  specification.md  tasks.md
sv_ref/: __init__.py  decoder.py  main.py
sv_ref/core/: analyzer.py  filelist.py  models.py
sv_ref/generator/: html.py
sv_ref/templates/: index.html.j2
tests/: conftest.py  test_analyzer.py  test_cli.py  test_decode.py  test_filelist.py  test_html_generator.py  test_models.py  test_snapshots.py
tests/__snapshots__/: test_snapshots.ambr
tests/samples/: basic_types.sv  edge_cases.sv  module_types.sv  nested.sv  signed_types.sv  wide_types.sv
